Todos-Uebung-CI-CD/.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos
  #namespace: ngj
  labels:
    app.kubernetes.io/name: todos
    app.kubernetes.io/instance: todos
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Kubectl
    app.kubernetes.io/created-by: ngj
spec:
  replicas: 2
  selector:
      matchLabels:
        app.kubernetes.io/name: todos
        app.kubernetes.io/instance: todos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todos
        app.kubernetes.io/instance: todos
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/created-by: ngj
    spec:
      containers:
      - name: todos-app
        image: registry.kubernetes-cluster-180.schulung.gcp.ordix.de/root/todos:1.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
